[package]
name = "lovem"
version = "0.0.0"
authors = ["j-stach"]
description = "Safe wrappers for LLVM (WIP)"
license = "MIT"
repository = "https://github.com/j-stach/lovem"
homepage = "https://github.com/j-stach/lovem"
documentation = "https://github.com/j-stach/lovem"

categories = ["api-bindings"]
keywords = ["llvm"]

[dependencies]
anyhow = "1.0.79"
derive_more = "0.99.17"
libc = "0.2.152"
llvm-sys = "170.0.1"
paste = "1.0.14"
# thiserror = "1.0.56" # TODO Use to build error types in final version?


[lib]
crate-type = ["rlib"]
